--- a/sass/posts.scss
+++ b/sass/posts.scss
@@ -1,29 +1,39 @@
 .post {
-	position: relative;
-
-	div {
-		margin: auto;
-	}
-
-	h1 {
-		color: green;
-	}
+	width: 100vw;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  font-family: "Poppins";
 }
 
 .primary-btn {
 	padding: 10px 20px;
-	background-color: transparent;
+	background-color: lightgreen;
 	border: none;
+  margin: 10px;
 	border-radius: 4px;
 
+	&:hover {
+		cursor: pointer;
+	}
+}
+
+.outline-btn {
+  padding: 10px 20px;
+  margin: 10px;
+  border: 2px solid lightgreen;
+  border-radius: 4px;
+  transition: all 300ms;
+
   &:hover {
-    background-color: lightgreen;
     cursor: pointer;
+    background-color: lightgreen;
+    border-radius: 30px;
   }
 }
 
 .link {
-  text-decoration: none;
-  font-weight: bold;
-  color: green;
+	text-decoration: none;
+	font-weight: 600;
+	color: green;
 }
